# zipline-cpp

./: .clang-format  .drone.yml  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  Makefile  packages.cmake
.gitea/workflows/: release.yml
cmake/: modules.cmake
include/: CMakeLists.txt
include/zipline/: CMakeLists.txt  buffer.h  client.h  client.hpp  data_stream.h  error.h  error.hpp  error_list.h  error_list.hpp  macros.h  memory_buffer.h  protocol.h  protocol.hpp  response.h  response.hpp  router.h  router.hpp  server_protocol.h  server_protocol.hpp  transfer.h  zipline  zipline.h
include/zipline/codable/: CMakeLists.txt  codable  codable.hpp
include/zipline/coder/: base.h  coder.h  data_stream.h  object.h  optional.h  pair.h  span.h  string.h  time_point.h  vector.h
include/zipline/io/: CMakeLists.txt  buffer.hpp  io  io.hpp  null.hpp
include/zipline/transfer/: base.h  data_stream.h  object.h  optional.h  pair.h  span.h  string.h  time_point.h  transfer.h  vector.h
src/: CMakeLists.txt
src/libzipline/: CMakeLists.txt  error.cpp  error.test.cpp  error_list.cpp  memory_buffer.cpp  router.test.cpp  server_protocol.test.cpp  socket.test.cpp  socket.test.hpp
src/libzipline/codable/: CMakeLists.txt  bool.test.cpp  coder.test.hpp  enum.test.cpp  integral.test.cpp  object.test.cpp  optional.test.cpp  pair.test.cpp  string.test.cpp  (+2 more)
src/zipline.test/: CMakeLists.txt  buffer.test.cpp  error.test.cpp  logger.test.cpp  main.test.cpp  object.test.cpp  router.test.cpp  server_protocol.test.cpp  socket.test.cpp  socket.test.h
(+20 files in other folders)
